--- a/web2/web3/ga.html
+++ b/web2/web3/ga.html
@@ -205,10 +205,10 @@ Happiest Bday THE  MAYUR RATHOD🎂🍾</p>
   </div>
 </div>
 
-
+<br>
 <center>
 <a href="../../index5.html" class="button">Read Letter</a>
-</center>
+</center><br><br>
 </div>
 
 
