--- a/web2/web3/ga.html
+++ b/web2/web3/ga.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Test</title>
+<title>Wishes</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <!------ Include the above in your HEAD tag ---------->
 <style>
