--- a/web2/web3/ga.html
+++ b/web2/web3/ga.html
@@ -27,7 +27,7 @@
   <img class="card-img-top" src="assets/mayu1.webp" alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title">Amey</h5>
-    <p class="card-text">"Actions speak louder than words!!" या विचाराला तंतोतंत परिभाषित करणारे 😌🤗, SSGMCE's perfect allrounder 🏏, लोक्कांना मितभाषी वाटणारे पण खूप चबर चबर करणारे 🤐, सगळ्या जूनियरचे लाडके सीनिअर 😂 लायब्ररीमध्ये स्पेशल वेळ देऊन अभ्यास करणारे 😜 मॅगी कॉर्नर चे प्राईम कस्टमर 😎 मिशी नसली तरी सतत ताव मारत फिरणारे 😝 मयुर राठोड यांना जैन सरच्या थोड्या शिव्या देऊन, Turbo C, Turbo C++, Java SDK install करून वाढदिवसाच्या हार्दिक शुभेच्छा 🎉🎂🥳
+    <p class="card-text">"Actions speak louder than words!!" या विचाराला तंतोतंत परिभाषित करणारे 😌🤗, SSGMCE's perfect allrounder 🏏, लोक्कांना मितभाषी वाटणारे पण खूप चबर चबर करणारे 🤐, सगळ्या जूनियरचे लाडके सीनिअर 😂 लायब्ररीमध्ये स्पेशल वेळ देऊन अभ्यास करणारे 😜 मॅगी कॉर्नर चे प्राईम कस्टमर 😎 मिशी नसली तरी सतत ताव मारत फिरणारे 😝 मयुर राठोड यांना जैन सरच्या थोड्या शिव्या देऊन, Turbo C, Turbo C++, Java SDK install करून आणि १७०० चा ड्रेस 👗 घालून वाढदिवसाच्या हार्दिक शुभेच्छा 🎉🎂🥳
 #one_person_is_always_enough ❤️</p>
     
   </div>
