--- a/web2/web3/ga.html
+++ b/web2/web3/ga.html
@@ -30,7 +30,7 @@
 <div class="card mb-3">
   <img class="card-img-top" src="assets/mayu1.webp" alt="Card image cap">
   <div class="card-body">
-    <h5 class="card-title">Amey</h5>
+    <h5 class="card-title">Mi 🙌</h5>
     <p class="card-text">"Actions speak louder than words!!" या विचाराला तंतोतंत परिभाषित करणारे 😌🤗, SSGMCE's perfect allrounder 🏏, लोक्कांना मितभाषी वाटणारे पण खूप चबर चबर करणारे 🤐, सगळ्या जूनियरचे लाडके सीनिअर 😂 लायब्ररीमध्ये स्पेशल वेळ देऊन अभ्यास करणारे 😜 मॅगी कॉर्नर चे प्राईम कस्टमर 😎 मिशी नसली तरी सतत ताव मारत फिरणारे 😝 मयुर राठोड यांना जैन सरच्या थोड्या शिव्या देऊन, Turbo C, Turbo C++, Java SDK install करून आणि १७०० चा ड्रेस 👗 घालून वाढदिवसाच्या हार्दिक शुभेच्छा 🎉🎂🥳 #one_person_is_always_enough ❤️</p>
     
   </div>
@@ -92,7 +92,7 @@
 <div class="card mb-3">
   <img class="card-img-top" src="assets/amya1.webp" alt="Card image cap">
   <div class="card-body">
-    <h5 class="card-title">Amey</h5>
+    <h5 class="card-title">Mi 🙌</h5>
     <p class="card-text">श्री शिवाजी विद्यालयामधून उत्तीर्ण झालेले 👨‍🎓, नको त्या विषयात नाक खुपसून स्वतःला अपमानित करून घेणारे 😝, मुलतानी मिट्टी लाऊन चेहऱ्यावर ग्लो येतो असे समजून सकाळ - संध्याकाळ मिट्टी च मिट्टी चोपडणारे 🧏‍♂️, OYO कंपनीचे प्राईम कस्टमर 😜, चिखलीत घराच्या बाजूला विमानतळ बांधण्याचे स्वप्न बाळगणारे 🛫, स्वतःला नकळत पणें रणवीर समजून दीपिकाच्या शोधात असलेले (५ दीपिका आधीच झाल्या 🤦‍♂️) असे आमचे real life comrade ❤️ आईच्या लाडक्या अमितला प्रगट दिनाच्या हार्दिक शुभेच्छा 🎉🎂😘</p>
     
   </div>
