--- a/index3.html
+++ b/index3.html
@@ -34,7 +34,7 @@
 	<br><br>
 	
                     <div class="inner cover">
-                        <h1 class="cover-heading">Dhyaan Se Dekhiye iss do Aadamiyonko Ko 😜</h1>
+                        <h1 class="cover-heading">Dhyaan Se Dekhiye inn do Aadamiyonko Ko 😜</h1>
                         <p class="lead">It's Their Pragatdin 🎂 Today!!</p><br><br>
 						<div class="container">
 						  <div class="row">
